--- a/PostIt/index.html
+++ b/PostIt/index.html
@@ -19,7 +19,10 @@
         <script type="text/javascript" src="../metro_ui_css/javascript/slider.js"></script>
         <script type="text/javascript" src="../metro_ui_css/javascript/tile-drag.js"></script>
         <script type="text/javascript" src="../metro_ui_css/javascript/tile-slider.js"></script>
-    
+        
+        <script type="text/javascript"	src="./three.js"></script>
+        <script type="text/javascript"	src="./jquery.min.js"></script>
+
 	<script>
 	// Not showing vendor prefixes or code that works cross-browser:
 		
