--- a/May4/index.html
+++ b/May4/index.html
@@ -21,7 +21,8 @@
       },
       body: JSON.stringify({
         ip: window["myip"],
-        date: Date.now()
+        date: Date.now(),
+        stage: "open",
       })
     })
   </script>
